<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="openBracket">(</string>
    <string name="closingBracket">)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="calculate">Calculate!</string>
    <string name="backspace">delete</string>
    <string name="result">%1$s = %2$s</string>
    <string name="error">Error!</string>
    <string name="comma">,</string>
</resources>
